# RailMind

./: .gitignore  AUDIT.md  LICENSE  README.md  REDESIGN_PROMPT.md  demo.sh  dev.sh  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
.claude/: launch.json
RailMind-main/: README.md  analysis_options.yaml  firebase.json  pubspec.yaml
app/: globals.css  page.tsx
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/config/: delhi_ndls_agra.yaml  india_wide.yaml  mumbai_csmt_igatpuri.yaml
backend/data/: delhi_sections.geojson  delhi_stations.geojson  delhi_timetable.json  india_sections.geojson  india_stations.geojson  india_timetable.json  stations.geojson
backend/railmind/: __init__.py  anomaly.py  app.py  brain.py  config.py  datasource.py  detectors.py  explainer.py  forecaster.py  geo.py  interfaces.py  llm.py  models.py  network.py  nl.py  nl_agent.py  optimizer.py  optimizer_ortools.py  orchestrator.py  passenger.py  predictor.py  predictor_hybrid.py  timeline.py  train_delay.py  twin.py  verifier.py  verifier_llm.py
backend/railmind/live/: __init__.py  ingest.py  interfaces.py  reconciler.py  store.py
backend/railmind/live/providers/: __init__.py  rapidapi.py  replay.py
backend/scripts/: build_osm_geometry.py
backend/tests/: conftest.py  test_engine.py  test_geo.py  test_geometry_data.py  test_intelligence.py  test_live.py  test_network.py  test_orchestrator.py  test_timeline.py  test_twin.py
components/: AlertsFeed.tsx  MapLegend.tsx  NetworkMap.tsx  Roster.tsx
(+149 files in other folders)
