[project]
name = "railmind"
version = "1.0.0"
description = "RailMind digital-twin engine: modular, typed railway corridor simulation with conflict detection, prediction, optimization and verification."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "networkx>=3.4",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.28"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["railmind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
